tests/snapshots/test_runner__tests__compiler__typecheck__mutually_recursive_enum_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Foo = #foo(Bar) | #nullFoo

type Bar = #bar(Foo) | #nullBar

entry
  #foo(#bar(#foo(#nullFoo))) print // Compile Error

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/mutually_recursive_enum_1.kk:6:18
  │
6 │   #foo(#bar(#foo(#nullFoo))) print // Compile Error
  │                  ^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Bar         | + Foo       |
    +---------------+-------------+
